<resources>
    <string name="app_name">Counter</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_add_route">Add route</string>
    <string name="menu_routes_list">Routes list</string>

    <string name="error_permission_gps">Please enable location</string>

    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_prepare">Prepare</string>
    <string name="button_tick">Tick</string>
    <string name="button_cadence">Cadence</string>
    <string name="unit_km_h">%.2fKM\\H</string>
    <string name="cadence_format">%03dC&#160;&#160;</string>
    <string name="speed_format" formatted="false">%02d.%01d</string>
    <string name="distance_format">%.3fKM</string>
    <string name="odo_format">%06dODO</string>
    <string name="average_speed">Avg speed</string>
    <string name="max_speed">Max speed</string>
    <string name="session_time">Session time: </string>
    <string name="weather_conditions_format" formatted="false">%.1f° (%.1f°), %.1fhPa, %d%%</string>
    <string name="summary_text" formatted="false">Distance traveled: %s\nTrip time: %s\nStop time: %s\n\n</string>

    <string name="button_add">Add</string>
    <string name="hint_name">Name</string>
    <string name="hint_point_name">Point name</string>
    <string name="hint_distance">Distance</string>

    <string name="settings_odo_key">odo_key</string>
    <string name="settings_odo">ODO</string>
    <string name="settings_debug_mode_key">debug_key</string>
    <string name="settings_debug_mode">Is debug on</string>
    <string name="settings_wheel_size_key">wheel_size_key</string>
    <string name="settings_wheel_size">Wheel size [mm]</string>
    <string name="settings_wheel_size_invalid">Invalid wheel size!</string>
    <string name="settings_max_speed_key">max_speed</string>
    <string name="settings_max_speed">Maximum speed</string>
    <string name="settings_distance_key">trip_distance</string>
    <string name="settings_distance">Trip distance</string>

    <string name="confirm_exit_title">Close application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
