<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/route_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:hint="@string/hint_name"
        android:layout_alignParentTop="true"
        />



    <Button
        android:id="@+id/button_add"
        android:layout_width="70dp"
        android:layout_height="85dp"
        android:text="@string/button_add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />
    <EditText
        android:id="@+id/route_point_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_distance"
        android:layout_toLeftOf="@id/button_add"
        android:layout_alignParentBottom="true"
        />
    <EditText
        android:id="@+id/route_point_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:hint="@string/hint_point_name"
        android:layout_toLeftOf="@id/button_add"
        android:layout_above="@id/route_point_distance"
        />
</RelativeLayout>